[package]
name = "image_compressor"
version = "3.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = [ "cargo" ] }
env_logger = "0.11.3"
image = { version = "0.25.1", default-features = false, features = [ "jpeg", "png" ] }
log = "0.4.22"
num-traits = "0.2"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
texpresso = "2.0.1"

ktx2_wrapper = { path = "../ktx2_wrapper" }
shared_types = { path = "../shared_types" }
